syntax = "proto3";

package proto;

option go_package = "./proto";

// Order Service definition
service OrderService {
  // Create a new order
  rpc CreateOrder (OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
  string product_id = 1;
  int32 quantity = 2;
  string user_id = 3;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
  float total_price = 3;
}
