syntax = "proto3";

package proto;

option go_package = "./proto";

// Product Service definition
service ProductService {
  // Check if a product is available
  rpc CheckProductAvailability (ProductRequest) returns (ProductResponse) {}
}

message ProductRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message ProductResponse {
  bool is_available = 1;
  float price = 2;
  string product_name = 3;
}
